// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test entreprise search correct siren 1`] = `
Object {
  "activitePrincipale": "Fabrication et rechapage de pneumatiques",
  "conventions": Array [
    Object {
      "idcc": 45,
      "shortTitle": "Caoutchouc",
    },
    Object {
      "idcc": 1486,
      "shortTitle": "Bureaux d'études techniques, cabinets d'ingénieurs-conseils et sociétés de conseils",
    },
  ],
  "etablissements": 28,
  "highlightLabel": "MANUF FRANC PNEUMATIQ MICHELIN",
  "label": "MANUF FRANC PNEUMATIQ MICHELIN",
  "matching": 26,
  "matchingEtablissement": Object {
    "address": "Rue de Cataroux 63100 Clermont-Ferrand",
    "siret": "85520050700454",
  },
  "simpleLabel": "MANUF FRANC PNEUMATIQ MICHELIN",
  "siren": "855200507",
}
`;

exports[`Test etablissement search correct siret 1`] = `
Object {
  "activitePrincipale": "Fabrication et rechapage de pneumatiques",
  "address": "16 Rue de Toutlemonde 49300 Cholet",
  "convention": Object {
    "idcc": 45,
    "shortTitle": "Caoutchouc",
  },
  "etablissements": 28,
  "highlightLabel": "MANUF FRANC PNEUMATIQ MICHELIN",
  "label": "MANUF FRANC PNEUMATIQ MICHELIN",
  "matching": 1,
  "simpleLabel": "MANUF FRANC PNEUMATIQ MICHELIN",
  "siren": "855200507",
  "siret": "85520050700710",
}
`;

exports[`Test search generic search 1`] = `
Object {
  "activitePrincipale": "Fabrication et rechapage de pneumatiques",
  "conventions": Array [
    Object {
      "idcc": 45,
      "shortTitle": "Caoutchouc",
    },
    Object {
      "idcc": 1486,
      "shortTitle": "Bureaux d'études techniques, cabinets d'ingénieurs-conseils et sociétés de conseils",
    },
  ],
  "etablissements": 28,
  "highlightLabel": "MANUF FRANC PNEUMATIQ <b><u>MICHELIN</b></u>",
  "label": "MANUF FRANC PNEUMATIQ MICHELIN",
  "matching": 18,
  "matchingEtablissement": Object {
    "address": "16 Rue de Toutlemonde 49300 Cholet",
    "siret": "85520050700710",
  },
  "simpleLabel": "MANUF FRANC PNEUMATIQ MICHELIN",
  "siren": "855200507",
}
`;
